# Microservice-Territories

./: Dockerfile  Makefile  README.md  app.py  common_functions.py  create_functions.py  delete_functions.py  docker-compose.yml  lambda_function.py  pyproject.toml  retrieve_functions.py  update_functions.py
application/: app.py  common_functions.py  create_functions.py  delete_functions.py  retrieve_functions.py  update_functions.py
tests/: create_test.py  create_tests.py  delete_test.py  example_requests.py  retrieve_test.py  update_test.py
