[tool.poetry]
name = "aws-lambda-microservice-territories"
version = "0.1.0"
description = ""
authors = ["Jana"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
boto3 = "^1.35.43"
uvicorn = "^0.32.0"

[tool.poetry.dev-dependencies]
mypy = "^1.12.0"
ruff = "^0.7.0"
black = "^24.10.0"
pytest = "^7.1.0"
boto3-stubs = "^1.35.43"

[tool.poetry.group.dev.dependencies]
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
